fix static-header readablity

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -187,9 +187,12 @@ img.displaySlide {
 
 .static-header {
   position: absolute;
-  bottom: 1%;
-  left: 1%;
+  bottom: 0;
+  left: 0;
+  background-color: grey;
+  opacity: 0.9;
   color: #fdf9f5;
+  padding: 0.5rem;
 }
 
 .static-header h1 {
